Fixing signup alignment

--- a/frontend/src/app/auth/login/login.component.scss
+++ b/frontend/src/app/auth/login/login.component.scss
@@ -17,7 +17,7 @@ body
 .box
 {
     position: absolute;
-    top:35%;
+    top:30%;
     left:37%;
     opacity:1;
     padding:600px 50px 40px 50px;
