--- a/frontend/src/app/auth/signup/signup.component.scss
+++ b/frontend/src/app/auth/signup/signup.component.scss
@@ -1,11 +1,5 @@
-mat-card {
-    margin-top: 10rem;
-    width: 60%;
-    text-align: center;
-}
-
 mat-form-field {
-    width: 70%;
+    width: 100%;
 }
 
 html,body{height:100%;margin:0;padding:0;}
@@ -23,7 +17,7 @@ body
 .box
 {
     position: absolute;
-    top:35%;
+    top:27%;
     left:37%;
     opacity:1;
     padding:600px 50px 40px 50px;
